Moved message-* images to v-sprite to decrease the width of h-sprite-43 and to fix an align issue of search icon in search input
git-svn-id: http://svn.projects.ez.no/admin2pp@5 7d5823d8-de58-4d2a-bab8-4b9ce82eb87f

--- a/trunk/extension/admin2pp/design/admin2/stylesheets/pagelayout.css
+++ b/trunk/extension/admin2pp/design/admin2/stylesheets/pagelayout.css
@@ -543,7 +543,7 @@ div.popupmenu a
 
 div.popupmenu a.more
 {
-    background:url(../images/h-sprite-43.png) no-repeat right -10358px;/*background-image: url(../images/more-arrow.gif);
+    background:url(../images/v-sprite-43.png) no-repeat right -158px;/*background-image: url(../images/more-arrow.gif);
     background-repeat: no-repeat;
     background-position: right center;*/
 }
